2011-06-02  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSApplication.m (-finishLaunching): Move creation of the
	app icon from here ...
	* Source/NSApplication.m (-_appIconInit):
	* Source/Functions.m (NSApplicationMain): ... to here so that
	applications get a proper app icon under WindowMaker even when
	their main nib contains visible at launch time windows.

2011-05-31 Riccardo Mottola <rm@gnu.org>

	* Images/common_Miniaturize.tiff
	Revert image but with correct dpi of 72.

2011-05-31  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSWindow.m (-orderWindow:relativeTo:): Take care of hide
	on deactivate windows.
	* Source/NSWindow.m (-setHidesOnDeactivate:): Hide/unhide receiver
	when the flag is changed and the application is not active.

	* Source/NSWindow.m (-_isWindowInactive:, _setWindow:inactivate:):
	New private NSApplication category to support management of hide
	on deactivate windows.

	* Source/NSApplication.m (-deactivate): Fix order of actions when
	hiding inactive windows.

2011-05-31  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSImage.m (-bestRepresentationForDevice): Prefer
	returning an image representation whose size matches the image
	size exactly.

	* Source/NSImage.m (-_bestRep:withBpsMatch:): Fix test confusing
	bits per sample and bits per pixel.

2011-05-29 20:34-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GNUmakefile: Remove NSManagedObjectContext.[hm] from compile
	* Source/NSManagedObjectContext.h
	* Source/NSManagedObjectContext.m: Delete
	* Source/NSObjectController.m: Remove #import and add @class 
	declaration.

2011-05-29 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSButtonCell.m (-drawImage:withFrame:inView:): Use rint
	instead of round.

2011-05-27 14:08  David Chisnall <theraven@gna.org>

	* libs/gui/trunk/Source/NSMenu.m:
	Don't create a zone in GC mode (detected at run time). This avoids a
	warning when starting GUI apps in GC mode, but should have no real effect
	on functionality.
