@@ -1,3 +1,11 @@
+2011-06-02 16:17-EDT Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Source/GSThemeMenu.m: Use NSArchiver to copy menu instead of
+	copy.  Add comment to explain why this is done.  The
+	copy method causes all of the NSMenu instances to share
+	NSMenuItems.  This appears to be causing a crash when the 
+	menu updates.
+
 2011-06-02  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Source/NSApplication.m (-finishLaunching): Move creation of the
